--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>UH OH!</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
@@ -14,8 +14,11 @@
 
   .rails-default-error-page div.dialog {
     width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
+    max-width: 30em;
+/*    margin: 4em auto 0;*/
+    margin-top: 4em;
+    margin-left: 1em;
+
   }
 
   .rails-default-error-page div.dialog > div {
@@ -26,9 +29,16 @@
     border-top: #B00100 solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
-    background-color: white;
+    background-color: transparent;
     padding: 7px 12% 0;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+
+  }
+
+  .rails-default-error-page {
+     background-size: 100%;
+     background-repeat: no-repeat;
+
   }
 
   .rails-default-error-page h1 {
@@ -49,19 +59,20 @@
     border-bottom-right-radius: 4px;
     border-top-color: #DADADA;
     color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+    box-shadow: 0 3px 10px rgba(50, 50, 50, 0.17);
   }
+
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="rails-default-error-page" style="background-image: url('/images/404image.jpg')">
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
+      <h1>Oh no! Looks like you're lost!</h1>
       <p>You may have mistyped the address or the page may have moved.</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>Let's go back home :)</p>
   </div>
 </body>
 </html>
